[tool.poetry]
name = "phoenix"
version = "0.1.0"
description = "Bug bounty researcher skills graph — maps the good-faith hacker community"
authors = ["CJE"]
packages = [{include = "phoenix", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
neo4j = "^5.25"
redis = "^5.0"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
pydantic = "^2.9"
pydantic-settings = "^2.6"
httpx = "^0.27"
curl-cffi = "^0.7"
playwright = "^1.48"
celery = {extras = ["redis"], version = "^5.4"}
structlog = "^24.4"
tenacity = "^9.0"
fake-useragent = "^1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^5.0"
ruff = "^0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
